PLFM-7616: Add MEDIUMTEXT column type